增加权限校验

--- a/settings.gradle
+++ b/settings.gradle
@@ -10,6 +10,31 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        maven {
+            url "https://maven.aliyun.com/repository/public"
+        }
+        maven {
+            url "https://maven.aliyun.com/repository/google"
+        }
+        maven {
+            url "https://maven.aliyun.com/repository/central"
+        }
+
+        maven {
+            url "https://jitpack.io"
+        }
+        maven {
+            url 'https://maven.aliyun.com/nexus/content/repositories/releases/'
+        }
+        maven {
+            url  'https://repo1.maven.org/maven2/'
+        }
+        maven {
+            url 'https://developer.huawei.com/repo/'
+        }
+        maven {
+            url "https://bintray.com/wechat-sdk-team/maven"  //配置仓库即可
+        }
     }
 }
 rootProject.name = "NCNNDemo"
