--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,6 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'org.apache.commons:commons-math3:3.6.1'
 
+    //高斯模糊
+    implementation 'com.github.centerzx:ShapeBlurView:1.0.5'
 }
