增加批量降噪增益功能

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
         android:theme="@style/Theme.NCNNDemo"
         tools:targetApi="31">
         <activity
+            android:name=".activity.FileNsxAgcActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.AppFileChosenActivity"
             android:exported="false" />
         <activity
