--- a/settings.gradle
+++ b/settings.gradle
@@ -3,6 +3,19 @@ pluginManagement {
         google()
         mavenCentral()
         gradlePluginPortal()
+        jcenter()
+        maven {
+            url 'https://maven.aliyun.com/nexus/content/repositories/releases/'
+        }
+        maven {
+            url  'https://repo1.maven.org/maven2/'
+        }
+        maven {
+            url 'https://developer.huawei.com/repo/'
+        }
+        maven {
+            url 'https://artifact.bytedance.com/repository/AwemeOpenSDK'
+        }
     }
 }
 dependencyResolutionManagement {
@@ -34,6 +47,9 @@ dependencyResolutionManagement {
         }
         maven {
             url "https://bintray.com/wechat-sdk-team/maven"  //配置仓库即可
+        }
+        maven {
+            url 'https://artifact.bytedance.com/repository/AwemeOpenSDK'
         }
     }
 }
