--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,13 +45,13 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    //音频FBank特征提取
+    implementation fileTree(dir: 'libs', include: ['*.jar','*.aar'])
+    implementation 'org.apache.commons:commons-math3:3.6.1'
+
     //pytorch
     implementation 'org.pytorch:pytorch_android:1.12.1'
     implementation 'org.pytorch:pytorch_android_torchvision:1.12.1'
-
-    //音频FBank特征提取
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'org.apache.commons:commons-math3:3.6.1'
 
     //高斯模糊
     implementation 'com.github.centerzx:ShapeBlurView:1.0.5'
